fixed spacing issues

--- a/pages/posts/blog.module.css
+++ b/pages/posts/blog.module.css
@@ -40,7 +40,7 @@
 }
 
 .title {
-  margin: 0;
+  margin: 12px;
   line-height: 1.15;
   font-size: 4rem;
   align: center;
